# IntentCP

./: .gitignore  LICENSE  README.ko.md  README.md
home-mcp-core/src/home_mcp_core/: app.py
home-mcp-siri-shortcuts-signal/: README.ko.md
intentcp-core/: pyproject.toml
intentcp-core/cli/: main.py
intentcp-core/src/home_mcp_core/: app.py  cli.py
intentcp-core/src/home_mcp_core/api/routes/: health.py
intentcp-core/src/home_mcp_core/cli/: devices.py  io.py  main.py  validate.py  wizard.py
intentcp-core/src/home_mcp_core/config/: devices.example.toml  settings.py
intentcp-core/src/home_mcp_core/domain/: devices.py
intentcp-core/src/home_mcp_core/routers/: control.py  health.py  panel.py  status.py
intentcp-core/src/home_mcp_core/services/: tuya_client.py  windows_agent.py
intentcp-core/src/intentcp_core/: app.py  cli.py
intentcp-core/src/intentcp_core/cli/: devices.py  io.py  main.py  validate.py  wizard.py
intentcp-core/src/intentcp_core/config/: devices.example.toml  settings.example.toml  settings.py
intentcp-core/src/intentcp_core/domain/: actions.py  devices.py
intentcp-core/src/intentcp_core/routers/: control.py  panel.py  status.py
intentcp-core/src/intentcp_core/services/: windows_agent.py
intentcp-core/web/static/: panel.css  panel.js
intentcp-core/web/templates/panel/: devices.html  index.html  settings.html
intentcp-shortcuts-signal/: README.md
intentcp-shortcuts-signal/install/: iCloud-link.ko.md  iCloud-link.md  setup-checklist.ko.md  setup-checklist.md
intentcp-shortcuts-signal/prompts/: README.ko.md  README.md
(+6 files in other folders)
